force-app/main/default/objects/Warranty__c/Warranty__c.object-meta.xml
<CustomObject>
    <label>Warranty</label>
    <nameField>
        <label>Warranty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warranties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>