force-app/main/default/objects/Warranty__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Calculates the warranty end date by adding the number of months from the term to the start date.</description>
    <formula>ADDMONTHS(Start_Date__c, Term__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>